SVN
---

	+ Several bugs fixed thanks to the contribution of Masahiro Kasahara:
	  - paco2porg failed when importing paco logs with no logged files
	  - porg hanged up when installing packages in multithreading environments
	  - porg failed to log filenames with spaces in them


Version 0.1 (16/03/2014)
------------------------

	+ Removed question 3 of the FAQ, which discusses logging of directories.
	+ Removed getopt from the distribution. Use native getopt.
	+ Do not check for regex.h in configure (assume it is available).
	+ Rewritten porgball in bash, and fixed some bugs in it.
	+ Fixed bug in porg when installing packages with description spanning
	  more than one line (thanks Gordon Findlay).


Version 0.0 (14/03/2014)
------------------------

Changes from the last version of paco:

	+ Disabled the options for removing shared files when uninstalling a
	  package, both in porg and grop. Now shared files are never removed,
	  as it ougth to be.
	+ Disabled listing of missing and shared files.
	+ Simplification of the GUI.
	+ Major code enhancements and cleanup.